--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,12 @@
 
     <groupId>me.zathrasnottheone.follow</groupId>
     <artifactId>Follow</artifactId>
-    <version>0.7-beta1</version>
+    <version>0.7</version>
     <name>Follow</name>
 
     <!-- Properties -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <build.number>Unknown</build.number>
     </properties>
 
     <!-- Repositories -->
@@ -24,33 +23,32 @@
         <repository>
 			<id>md_5-repo</id>
 			<url>http://repo.md-5.net/content/groups/public/</url>
-		  </repository>
-		  <repository>
-         <id>Plugin Metrics</id>
-         <url>http://repo.mcstats.org/content/repositories/public</url>
-        </repository>
+		</repository>
+		<repository>
+			<id>drkmatr-repo</id>
+			<url>https://minevolt.net/repo/</url>
+		</repository>
     </repositories>
     <!-- Dependencies -->
     <dependencies>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.9.2-R0.1-SNAPSHOT</version>
+            <version>1.14.4-R0.1-SNAPSHOT</version>
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
-            <version>1.9.2-R0.1-SNAPSHOT</version>
+            <version>1.14.4-R0.1-SNAPSHOT</version>
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.mcstats.bukkit</groupId>
-            <artifactId>metrics-lite</artifactId>
-            <version>R8-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>me.drkmatr1984</groupId>
+            <artifactId>customevents</artifactId>
+            <version>0.15</version>
         </dependency>
     </dependencies>
 
@@ -62,9 +60,29 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <artifactSet>
+                                <includes>
+                                    <include>me.drkmatr1984:customevents</include>
+                                </includes>
+                            </artifactSet>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
